--- a/index.html
+++ b/index.html
@@ -1,29 +1,77 @@
 <html>
 <head>
-  <title>A Leaflet map!</title>
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
-  <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-  <style>
-    #map{ width: 900px; height: 500px; }
-  </style>
+  <title>Lane Felker</title>
+  <script src='https://api.mapbox.com/mapbox-gl-js/v0.32.1/mapbox-gl.js'></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v0.32.1/mapbox-gl.css' rel='stylesheet' />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/tab.css">
+  <link rel="stylesheet" type="text/css" href="css/map.css">
+  <link rel="stylesheet" type="text/css" href="css/about.css">
+  <script src="js/tabTransition.js"></script>
+  <script src="js/mapContent.js"></script>
 </head>
+
 <body>
 
-  <div id="map"></div>
+  <ul class="tab">
+    <li><a href="javascript:void(0)" class="tablinks" onclick="loadContent(event, 'About')" id="defaultOpen">About</a></li>
+    <li><a href="javascript:void(0)" class="tablinks" onclick="loadContent(event, 'Nashville_Interactive')">Bike Nashville Interactive</a></li>
+    <li><a href="javascript:void(0)" class="tablinks" onclick="loadContent(event, 'Nashville_Static')">Bike Nashville Static</a></li>
+  </ul>
+
+  <div id="About" class="tabcontent">
+    <div id="aboutContent"></div>
+    <script> 
+      $(function(){
+        $("#aboutContent").load("html/about.html"); 
+      });
+    </script>
+  </div>
+
+  <div id="Nashville_Interactive" class="tabcontent">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-12 col-md-12">
+          <div id="mapContent"></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-12">
+          <div id="map"></div>
+        </div>
+      </div>
+    </div>
+
+    <script> 
+      $(function(){
+        $("#mapContent").load("html/mapContent.html"); 
+      });
+
+      var bounds = [[-86.897640, 36.090449], [-86.689192, 36.213608]];
+
+      mapboxgl.accessToken = 'pk.eyJ1IjoibGFuZWZlbGtlciIsImEiOiJjaXltMHlid3owMDAwMndwZ25oZ3E2ZndvIn0.oq1pkRiMAbhvGPPzD3nq2A';
+      var map = new mapboxgl.Map({
+          container: 'map',
+          maxZoom: 18,
+          style: 'mapbox://styles/lanefelker/ciyjbdp1400212ro9lkyl5f60',
+          zoom: 12,
+          center: [-86.79, 36.13],
+          maxBounds: bounds
+      });
+
+      map.fitBounds([[-86.897640, 36.090449], [-86.689192, 36.213608]]);
+    </script>
+  </div>
+
+  <div id="Nashville_Static" class="tabcontent">
+    <h3>Nashville Static Bike Map </h3>
+    <p>Comming Soon</p>
+  </div>
 
   <script>
-
-  // initialize the map
-  var map = L.map('map').setView([36.13, -86.79], 13);
-
-  // load a tile layer
-  var OpenStreetMap_BlackAndWhite = L.tileLayer('http://{s}.tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png', {
-    maxZoom: 18,
-    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-  });
-
-  OpenStreetMap_BlackAndWhite.addTo(map);
-
+    document.getElementById("defaultOpen").click();
   </script>
 </body>
 </html>
