--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <div id="Nashville_Static" class="tabcontent">
     <h3>Nashville Static Bike Map </h3>
-    <p>Comming Soon</p>
+    <p>Coming Soon</p>
   </div>
 
   <script>
