--- a/html/about.html
+++ b/html/about.html
@@ -7,7 +7,7 @@
       </p>
       <p>
         lanefelker@gmail.com<br>
-        <a href="linkedin.com/in/lane-felker">Linked In</a>
+        <a href="https:/www.linkedin.com/in/lane-felker">LinkedIn</a>
       </p>
     </div>
     <div class="col-sm-6 col-md-6">
