--- a/html/about.html
+++ b/html/about.html
@@ -15,10 +15,10 @@
         Check out some of my independent projects with the tabs above.
       </p>
       <p>
-        I am an aspiring geospatial wizard. I am broadly interested in maps, data visualization, software development, accessibility, social justice, and ecology. I recently received my bachelors from the University of Washington Computer Science program. My experience during that time includes studying the ecological impacts of climate change as a field crew leader and researcher in the <a href="https://faculty.washington.edu/jhrl/Index.html">HRL Lab</a> and working as a software developer for <a href="https://www.accessmapseattle.com/">Access Map Seattle</a> where I developed an interactive map on Android to help people with limited mobility navigate Seattle.
+        I am an aspiring geospatial wizard. I am broadly interested in maps, data visualization, software development, accessibility, social justice, and ecology. I recently received my bachelor's from the University of Washington Computer Science program. My experience during that time includes studying the ecological impacts of climate change as a field crew leader and researcher in the <a href="https://faculty.washington.edu/jhrl/Index.html">HRL Lab</a> and working as a software developer for <a href="https://www.accessmapseattle.com/">Access Map Seattle</a> where I developed an interactive map on for Android devices to help people with limited mobility navigate Seattle.
       </p>
       <p>
-        After graduating I traveled for a year, bicycling throughout South East Asia and thru-hiking the entire Appalachian Trail, and have recently settled back to Seattle, WA to pursue a career in software development and map making.
+        After graduating I traveled for a year, bicycling throughout South East Asia and thru-hiking the entire Appalachian Trail, and have recently settled back in Seattle, WA to pursue a career in software development and map making.
       </p>
       <p>
         In my free time you can find me thru-hiking long trails or bike touring in remote locations.
