--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         I am broadly interested in maps, data visualization, software development, accessibility, and ecology. I recently received my Bachelor's from the University of Washington Computer Science program. My experience during that time includes studying the ecological impacts of climate change as a field crew leader and researcher in the <a href="https://faculty.washington.edu/jhrl/Index.html"  target="_blank">HRL Lab</a> and working as a software developer for <a href="https://www.accessmapseattle.com/"  target="_blank">Access Map</a> where I developed an interactive map for Android devices to help people with limited mobility navigate Seattle.
       </p>
       <p>
-        After graduating I traveled for a year, bicycling throughout Southeast Asia and thru-hiking the entire Appalachian Trail, and have recently settled back in Seattle, WA to pursue a career in software development and map making. I am currently employed as a Geospatial Software Engineer for Access Map where I am working to expand the data visualization and routing capabilities of the web and mobile apps to encompass all of King County.
+        After graduating I traveled for a year, bicycling throughout Southeast Asia and thru-hiking the entire Appalachian Trail, and have recently settled back in Seattle, WA to pursue a career in software development and map making. I am currently employed as a Geospatial Software Engineer for Access Map where I am working to expand the data visualization and routing capabilities of their web and mobile apps to encompass all of King County.
       </p>
     </div>
     <div class="hr_container"><hr></div>
